[v#.#.#] ([month] [YYYY])
  - Add Setup Wizard
  - [entity]:
    - [future tense verb] [feature]
  - Upgraded gems:
    - rails
  - Bugs fixes:
    - Comments: Show sticky toolbar when adding long comments
    - Tables: Prevent the select all button from selecting filtered out rows when a filter is been applied
    - Bug tracker items:
      - [item]
  - New integrations:
    - [integration]
  - Integration enhancements:
    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - [report type]:
      - [future tense verb] [reporting enhancement]
  - REST/JSON API enhancements:
    - [API entity]:
      - [future tense verb] [API enhancement]
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.1.2 (December 2021)
  - Upgraded gems:
    - rails
  - Security Fixes:
    - High: Authenticated author path traversal

v4.1.0 (November 2021)
  - Editor:
    - Insert an appropriate single or multiline tag for blockquotes and codeblocks
    - Limit the content height for easier access to the Create/Update button
    - Quote text from comments and resource content (cards, evidence, issues, notes, etc)
  - Evidence:
    - Create a new issue (optionally) when creating new evidence
    - Move evidence across nodes
  - Tables:
    - Add selector to change the number of records displayed
  - Tylium:
    - Import CSS manifests from addons
    - Remove extra left padding from the first line of content in a code block
    - Remove height restriction from code blocks
  - Upgraded gems:
    - nokogiri, puma, rails
  - Bugs fixes:
    - Conflict resolver